Fix button alignments

--- a/styles.css
+++ b/styles.css
@@ -101,14 +101,14 @@ span.sale-price {
 }
 
 button {
-  width: 100%;
+  min-width: 18.4375rem;
   margin: 24px auto 0;
   padding: 16px 90px;
   color: var(--white);
   background-color: var(--dark-cyan);
   font-weight: 700;
-  text-align: center;
   display: flex;
+  justify-content: center;
   white-space: nowrap;
   border: none;
   border-radius: 10px;
@@ -160,10 +160,17 @@ button:active {
 
   .card-image img {
     height: 100%;
+    width: 300px;
   }
 
   h1 {
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
+  }
+
+  button {
+    min-width: 14.625rem;
+    display: flex;
+    justify-content: center;
   }
 }
